samples/_failures_safe/1761076403_c0a302_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9047d641.c: In function ‘main’:
./samples/SAFE/__tmp_9047d641.c:154:26: error: expected ‘)’ at end of input
  154 |                 if (fgets
      |                    ~     ^
      |                          )
./samples/SAFE/__tmp_9047d641.c:154:17: error: expected declaration or statement at end of input
  154 |                 if (fgets
      |                 ^~
./samples/SAFE/__tmp_9047d641.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9047d641.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9047d641.c:154:17: error: expected declaration or statement at end of input
